--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "dependencies": {
     "discovery-channel": "^5.5.1",
+    "fast-deep-equal": "^2.0.1",
     "lexicographic-integer": "^1.1.0",
     "pump": "^3.0.0",
     "through2": "^2.0.3"
