--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "fast-deep-equal": "^2.0.1",
     "lexicographic-integer": "^1.1.0",
     "pump": "^3.0.0",
+    "seuss-queue": "^1.0.0",
     "through2": "^2.0.3"
   },
   "devDependencies": {
